; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_ip6_output.c_ip6_allocmoptions.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_ip6_output.c_ip6_allocmoptions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip6_moptions = type { i32, i32, i32 }

@M_WAITOK = common dso_local global i32 0, align 4
@im6o_zone = common dso_local global i32 0, align 4
@im6o_size = common dso_local global i32 0, align 4
@ifa_mtx_grp = common dso_local global i32 0, align 4
@ifa_mtx_attr = common dso_local global i32 0, align 4
@IFD_ALLOC = common dso_local global i32 0, align 4
@im6o_debug = common dso_local global i64 0, align 8
@IFD_DEBUG = common dso_local global i32 0, align 4
@im6o_trace = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ip6_moptions* @ip6_allocmoptions(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ip6_moptions*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @M_WAITOK, align 4
  %6 = icmp eq i32 %4, %5
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32, i32* @im6o_zone, align 4
  %9 = call %struct.ip6_moptions* @zalloc(i32 %8)
  br label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @im6o_zone, align 4
  %12 = call %struct.ip6_moptions* @zalloc_noblock(i32 %11)
  br label %13

13:                                               ; preds = %10, %7
  %14 = phi %struct.ip6_moptions* [ %9, %7 ], [ %12, %10 ]
  store %struct.ip6_moptions* %14, %struct.ip6_moptions** %3, align 8
  %15 = load %struct.ip6_moptions*, %struct.ip6_moptions** %3, align 8
  %16 = icmp ne %struct.ip6_moptions* %15, null
  br i1 %16, label %17, label %45

17:                                               ; preds = %13
  %18 = load %struct.ip6_moptions*, %struct.ip6_moptions** %3, align 8
  %19 = load i32, i32* @im6o_size, align 4
  %20 = call i32 @bzero(%struct.ip6_moptions* %18, i32 %19)
  %21 = load %struct.ip6_moptions*, %struct.ip6_moptions** %3, align 8
  %22 = getelementptr inbounds %struct.ip6_moptions, %struct.ip6_moptions* %21, i32 0, i32 2
  %23 = load i32, i32* @ifa_mtx_grp, align 4
  %24 = load i32, i32* @ifa_mtx_attr, align 4
  %25 = call i32 @lck_mtx_init(i32* %22, i32 %23, i32 %24)
  %26 = load i32, i32* @IFD_ALLOC, align 4
  %27 = load %struct.ip6_moptions*, %struct.ip6_moptions** %3, align 8
  %28 = getelementptr inbounds %struct.ip6_moptions, %struct.ip6_moptions* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = or i32 %29, %26
  store i32 %30, i32* %28, align 4
  %31 = load i64, i64* @im6o_debug, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %42

33:                                               ; preds = %17
  %34 = load i32, i32* @IFD_DEBUG, align 4
  %35 = load %struct.ip6_moptions*, %struct.ip6_moptions** %3, align 8
  %36 = getelementptr inbounds %struct.ip6_moptions, %struct.ip6_moptions* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = or i32 %37, %34
  store i32 %38, i32* %36, align 4
  %39 = load i32, i32* @im6o_trace, align 4
  %40 = load %struct.ip6_moptions*, %struct.ip6_moptions** %3, align 8
  %41 = getelementptr inbounds %struct.ip6_moptions, %struct.ip6_moptions* %40, i32 0, i32 0
  store i32 %39, i32* %41, align 4
  br label %42

42:                                               ; preds = %33, %17
  %43 = load %struct.ip6_moptions*, %struct.ip6_moptions** %3, align 8
  %44 = call i32 @IM6O_ADDREF(%struct.ip6_moptions* %43)
  br label %45

45:                                               ; preds = %42, %13
  %46 = load %struct.ip6_moptions*, %struct.ip6_moptions** %3, align 8
  ret %struct.ip6_moptions* %46
}

declare dso_local %struct.ip6_moptions* @zalloc(i32) #1

declare dso_local %struct.ip6_moptions* @zalloc_noblock(i32) #1

declare dso_local i32 @bzero(%struct.ip6_moptions*, i32) #1

declare dso_local i32 @lck_mtx_init(i32*, i32, i32) #1

declare dso_local i32 @IM6O_ADDREF(%struct.ip6_moptions*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
